--- a/languages/fi_FI/LC_MESSAGES/messages.po
+++ b/languages/fi_FI/LC_MESSAGES/messages.po
@@ -35,19 +35,19 @@ msgstr ""
 
 #: packages/community_store/blocks/community_product_list/controller.php:24
 msgid "Add a Product List for Community Store"
-msgstr ""
+msgstr "Lisää tuoteluettelo Community Storeen"
 
 #: packages/community_store/blocks/community_product_list/controller.php:29
 msgid "Product List"
-msgstr ""
+msgstr "Tuoteluettelo"
 
 #: packages/community_store/blocks/community_product_list/controller.php:272
 msgid "A page must be selected"
-msgstr ""
+msgstr "Sivu pitää valita"
 
 #: packages/community_store/blocks/community_product_list/controller.php:276
 msgid "Number of Products must be a whole number"
-msgstr ""
+msgstr "Tuotteiden lukumäärän pitää olla kokonaisluku"
 
 #: packages/community_store/blocks/community_product_list/form.php:8
 #: packages/community_store/single_pages/dashboard/store/products/groups.php:22
@@ -65,11 +65,11 @@ msgstr ""
 #: packages/community_store/single_pages/dashboard/store.php:147
 #: packages/community_store/src/CommunityStore/Utilities/Installer.php:70
 msgid "Products"
-msgstr ""
+msgstr "Tuotteet"
 
 #: packages/community_store/blocks/community_product_list/form.php:11
 msgid "List Products"
-msgstr ""
+msgstr "Listaa tuotteet"
 
 #: packages/community_store/blocks/community_product_list/form.php:13
 msgid "All"
@@ -77,15 +77,15 @@ msgstr "Kaikki"
 
 #: packages/community_store/blocks/community_product_list/form.php:14
 msgid "Under current page"
-msgstr ""
+msgstr "Tällä sivulla"
 
 #: packages/community_store/blocks/community_product_list/form.php:15
 msgid "Under current page and child pages"
-msgstr ""
+msgstr "Tällä sivulla ja sen tytärsivuilla"
 
 #: packages/community_store/blocks/community_product_list/form.php:16
 msgid "Under a specified page"
-msgstr ""
+msgstr "Määritellyllä sivulla"
 
 #: packages/community_store/blocks/community_product_list/form.php:17
 msgid "Under a specified page and child pages"
